--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,21 +8,43 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
 li {
-  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
 }
 </style>
 </head>
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a class="active" href="#home">Home</a></li>
   <li><a href="#news">My hobby</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">My inspiration</a></li>
 </ul>
+
+</body>
+
+
+</style>
+</head>
+<body>
+
 
 <section id="welcome">
         <div class="parallax-inner">
